--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>About Me</h2>
     <div class="about-container">
         <img src="pfp.png" alt="Benjamin's Photo" class="about-photo">
-        <p>Hi, my name is Benjamin, I am 15 years old and I am from Argentina. I am learning frontend development and improving my skills every day.</p>
+        <p>Hi, my name is Julian, I am 15 years old and I am from Argentina. I am learning frontend development and improving my skills every day.</p>
     </div>
     </section>
     
