--- a/index.html
+++ b/index.html
@@ -34,12 +34,48 @@
     <section id="skills">
         <h2 data-translate="skills-title">Technical Skills</h2>
         <div class="skills-container">
-            <span><img src="https://cdn-icons-png.flaticon.com/256/5968/5968381.png" alt="TypeScript" class="logo"> TypeScript</span>
-            <span><img src="https://cdn4.iconfinder.com/data/icons/logos-3/600/React.js_logo-512.png" alt="React" class="logo"> React</span>
-            <span><img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Git" class="logo"> Git</span>
-            <span><img src="https://icons.iconarchive.com/icons/cornmanthe3rd/plex/256/Other-html-5-icon.png" alt="HTML" class="logo"> HTML</span>
-            <span><img src="https://img.icons8.com/?size=512&id=21278&format=png" alt="CSS" class="logo"> CSS</span>
-            <span><img src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="JavaScript" class="logo"> JavaScript</span>
+            <div class="skill" data-skill="TypeScript" data-level="50%">
+                <img src="https://cdn-icons-png.flaticon.com/256/5968/5968381.png" alt="TypeScript" class="logo"> TypeScript
+                <div class="tooltip">
+                    <span class="skill-level">50%</span>
+                    <div class="progress-bar" style="width: 50%"></div>
+                </div>
+            </div>
+            <div class="skill" data-skill="React" data-level="50%">
+                <img src="https://cdn4.iconfinder.com/data/icons/logos-3/600/React.js_logo-512.png" alt="React" class="logo"> React
+                <div class="tooltip">
+                    <span class="skill-level">50%</span>
+                    <div class="progress-bar" style="width: 50%"></div>
+                </div>
+            </div>
+            <div class="skill" data-skill="Git" data-level="40%">
+                <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Git" class="logo"> Git
+                <div class="tooltip">
+                    <span class="skill-level">40%</span>
+                    <div class="progress-bar" style="width: 40%"></div>
+                </div>
+            </div>
+            <div class="skill" data-skill="HTML" data-level="95%">
+                <img src="https://icons.iconarchive.com/icons/cornmanthe3rd/plex/256/Other-html-5-icon.png" alt="HTML" class="logo"> HTML
+                <div class="tooltip">
+                    <span class="skill-level">95%</span>
+                    <div class="progress-bar" style="width: 95%"></div>
+                </div>
+            </div>
+            <div class="skill" data-skill="CSS" data-level="95%">
+                <img src="https://img.icons8.com/?size=512&id=21278&format=png" alt="CSS" class="logo"> CSS
+                <div class="tooltip">
+                    <span class="skill-level">95%</span>
+                    <div class="progress-bar" style="width: 95%"></div>
+                </div>
+            </div>
+            <div class="skill" data-skill="JavaScript" data-level="80%">
+                <img src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="JavaScript" class="logo"> JavaScript
+                <div class="tooltip">
+                    <span class="skill-level">80%</span>
+                    <div class="progress-bar" style="width: 80%"></div>
+                </div>
+            </div>
         </div>
     </section>
     
