--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julian's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
     <header>
@@ -31,7 +30,7 @@
     </section>
     
     <section id="skills">
-        <h2 data-translate="skills-title">Technical Skills</h2>
+        <h2>Technical Skills</h2>
         <div class="skills-container">
             <div class="skill" data-skill="TypeScript" data-level="50%">
                 <img src="https://cdn-icons-png.flaticon.com/256/5968/5968381.png" alt="TypeScript" class="logo"> TypeScript
@@ -107,6 +106,12 @@
         </div>
     </section>
 
+    <!-- Sección de Precios -->
+    <section id="pricing">
+        <h2>Pricing</h2>
+        <p>Prices vary depending on the complexity of the project. However, they generally range from $5 to $50. Feel free to contact me for a more accurate quote based on your needs!</p>
+    </section>
+
     <!-- Sección de Testimonios -->
     <div class="testimonials-section">
     <div class="testimonial">
@@ -142,6 +147,6 @@
         <p>© 2025 Julian - All Rights Reserved</p>
     </footer>
 
-    <script src="languages.js"></script> <!-- Optional for adding translation functionality -->
+    <script src="translations.js"></script> <!-- Optional for adding translation functionality -->
 </body>
 </html>
