--- a/index.html
+++ b/index.html
@@ -147,6 +147,6 @@
         <p>© 2025 Julian - All Rights Reserved</p>
     </footer>
 
-    <script src="translations.js"></script> <!-- Optional for adding translation functionality -->
+    <script src="languages.js"></script> <!-- Optional for adding translation functionality -->
 </body>
 </html>
