--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 data-translate="about-title">About Me</h2>
         <div class="about-container">
             <img src="pfp.png" alt="Benjamin's Photo" class="about-photo">
-            <p data-translate="about-text">Hi, my name is Benjamin, I am 15 years old and I am from Argentina. I am learning frontend development and improving my skills every day.</p>
+            <p data-translate="about-text">Hi, my name is Julian, I am 15 years old and I am from Argentina. I am learning frontend development and improving my skills every day.</p>
         </div>
     </section>
 
