--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <section id="languages">
         <h2 data-translate="languages-title">Languages</h2>
         <div class="skills-container">
+            <h3>(Click to change)</h3>
             <span data-language="es" class="language-selector">Spanish</span>
             <span data-language="en" class="language-selector">English</span>
             <span data-language="ja" class="language-selector">Japanese</span>
