--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 data-translate="about-title">About Me</h2>
         <div class="about-container">
             <img src="pfp.png" alt="Benjamin's Photo" class="about-photo">
-            <p data-translate="about-text">Hi, my name is Julian, I am 15 years old and I am from Argentina. I am learning frontend development and improving my skills every day.</p>
+            <p data-translate="about-text">Hi, I'm Julián, I'm 15 years old, and I'm from Argentina. I'm passionate about web development, and I am currently focusing on improving my frontend skills, especially in HTML, CSS, JavaScript, and frameworks like React. Every day I learn something new and aim to keep growing as a developer. I'm excited for the opportunities the future holds in the digital world.</p>
         </div>
     </section>
 
