--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     
     <section id="skills">
-        <h2>Technical Skills</h2>
+        <h2 data-translate="skills-title">Technical Skills</h2>
         <div class="skills-container">
             <div class="skill" data-skill="TypeScript" data-level="50%">
                 <img src="https://cdn-icons-png.flaticon.com/256/5968/5968381.png" alt="TypeScript" class="logo"> TypeScript
