--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             <a href="mailto:julianbenjamingauna@gmail.com">Email</a>
             <a href="https://x.com/JulianWebDesign" target="_blank">Twitter (X)</a>
             <a href="https://discordapp.com/users/julian_webdev" target="_blank">Discord</a>
+            <a href="https://wa.me/5492233409420" target="_blank">WhatsApp</a>
         </div>
     </section>
 
