--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <a href="mailto:julianbenjamingauna@gmail.com">Email</a>
             <a href="https://x.com/JulianWebDesign" target="_blank">Twitter (X)</a>
             <a href="https://discordapp.com/users/julian_webdev" target="_blank">Discord</a>
-            <a href="https://wa.me/5492233409420" target="_blank">WhatsApp</a>
+            <a href="https://wa.me/5492233409420?text=%C2%A1Hola!%20Vi%20tu%20pagina%20web%20y%20me%20interesaron%20tus%20servicios." target="_blank">WhatsApp</a>
         </div>
     </section>
 
