--- a/index.html
+++ b/index.html
@@ -94,50 +94,50 @@
         <h2 data-translate="faq-title">Frequently Asked Questions</h2>
         <div class="faq-container">
             <div class="faq-item">
-                <h3>What is your experience level?</h3>
-                <p>I am constantly learning and growing, currently at an intermediate level, working on various personal and freelance projects.</p>
+                <h3 data-translate="faq1">What is your experience level?</h3>
+                <p data-translate="faqa1">I am constantly learning and growing, currently at an intermediate level, working on various personal and freelance projects.</p>
             </div>
             <div class="faq-item">
-                <h3>What languages and frameworks do you use?</h3>
-                <p>I primarily work with JavaScript, React, HTML, CSS, and Git for version control. I am also learning TypeScript.</p>
+                <h3 data-translate="faq2">What languages and frameworks do you use?</h3>
+                <p data-translate="faqa2">I primarily work with JavaScript, React, HTML, CSS, and Git for version control. I am also learning TypeScript.</p>
             </div>
             <div class="faq-item">
-                <h3>Do you offer freelance work?</h3>
-                <p>Yes! Feel free to contact me via email or Discord for freelance opportunities.</p>
+                <h3 data-translate="faq3">Do you offer freelance work?</h3>
+                <p data-translate="faqa3">Yes! Feel free to contact me via email or Discord for freelance opportunities.</p>
             </div>
         </div>
     </section>
 
     <!-- Sección de Precios -->
     <section id="pricing">
-        <h2>Pricing</h2>
-        <p>Prices vary depending on the complexity of the project. However, they generally range from $5 to $50. Feel free to contact me for a more accurate quote based on your needs!</p>
+        <h2 data-translate="pricing">Pricing</h2>
+        <p data-translate="prices">Prices vary depending on the complexity of the project. However, they generally range from $5 to $50. Feel free to contact me for a more accurate quote based on your needs!</p>
     </section>
 
     <!-- Sección de Testimonios -->
     <div class="testimonials-section">
     <div class="testimonial">
-        <p>"Trabajo excepcional, siempre entrega a tiempo y superando expectativas."</p>
+        <p data-translate="r1">"Trabajo excepcional, siempre entrega a tiempo y superando expectativas."</p>
         <footer class="testimonial-footer">- Cliente</footer>
     </div>
     <div class="testimonial">
-        <p>"Gran profesionalismo y siempre dispuesto a escuchar nuestras necesidades."</p>
+        <p data-translate="r2">"Gran profesionalismo y siempre dispuesto a escuchar nuestras necesidades."</p>
         <footer class="testimonial-footer">- Cliente</footer>
     </div>
     <div class="testimonial">
-        <p>"El mejor en su área. Recomiendo su trabajo sin reservas."</p>
+        <p data-translate="r3">"El mejor en su área. Recomiendo su trabajo sin reservas."</p>
         <footer class="testimonial-footer">- Cliente</footer>
     </div>
     <div class="testimonial">
-        <p>"Increíble atención y siempre entregando trabajo de calidad, ¡sin duda volveremos a trabajar con él!"</p>
+        <p data-translate="r4">"Increíble atención y siempre entregando trabajo de calidad, ¡sin duda volveremos a trabajar con él!"</p>
         <footer class="testimonial-footer">- Empresa</footer>
     </div>
     </div>
 
     <!-- Sección de Contacto -->
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>If you'd like to work with me, feel free to reach out!</p>
+        <h2 data-translate="contact">Contact Me</h2>
+        <p data-translate="contact2">If you'd like to work with me, feel free to reach out!</p>
         <div class="contact-container">
             <a class="gmail" href="mailto:julianbenjamingauna@gmail.com">Email</a>
             <a class="twitter" href="https://x.com/JulianWebDesign" target="_blank">Twitter (X)</a>
