--- a/index.html
+++ b/index.html
@@ -117,20 +117,20 @@
     <!-- Sección de Testimonios -->
     <div class="testimonials-section">
     <div class="testimonial">
-        <p data-translate="r1">"Trabajo excepcional, siempre entrega a tiempo y superando expectativas."</p>
-        <footer class="testimonial-footer">- Cliente</footer>
+        <p data-translate="r1">"Exceptional work, always delivered on time and exceeding expectations."</p>
+        <footer class="testimonial-footer">- Client</footer>
     </div>
     <div class="testimonial">
-        <p data-translate="r2">"Gran profesionalismo y siempre dispuesto a escuchar nuestras necesidades."</p>
-        <footer class="testimonial-footer">- Cliente</footer>
+        <p data-translate="r2">"Great professionalism and always willing to listen to our needs."</p>
+        <footer class="testimonial-footer">- Client</footer>
     </div>
     <div class="testimonial">
-        <p data-translate="r3">"El mejor en su área. Recomiendo su trabajo sin reservas."</p>
-        <footer class="testimonial-footer">- Cliente</footer>
+        <p data-translate="r3">"The best in his area. I recommend his work without reservation."</p>
+        <footer class="testimonial-footer">- Client</footer>
     </div>
     <div class="testimonial">
-        <p data-translate="r4">"Increíble atención y siempre entregando trabajo de calidad, ¡sin duda volveremos a trabajar con él!"</p>
-        <footer class="testimonial-footer">- Empresa</footer>
+        <p data-translate="r4">"Incredible attention and always delivering quality work, we will definitely work with him again!"</p>
+        <footer class="testimonial-footer">- Company</footer>
     </div>
     </div>
 
