--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
         </div>
     </section>
 
+    <!-- Sección de Mis Trabajos -->
+    <section id="my-works">
+        <h2 data-translate="my-works-title">Mis Trabajos</h2>
+        <div class="work-container">
+            <img src="screenshot.png" alt="My work" class="work-image">
+            <a href="https://jyccarstore.netlify.app/" target="_blank" class="work-link">Visit Page</a>
+        </div>
+    </section>
+    
     <!-- Sección de Precios -->
     <section id="pricing">
         <h2 data-translate="pricing">Pricing</h2>
